Plugins/UnrealDotNet/Source/UnrealDotNetRuntime/Private/Generate/Export/UNavMovementComponent.h

	DOTNET_EXPORT auto E_UNavMovementComponent_CanEverCrouch(UNavMovementComponent* Self)
	{
		return Self->CanEverCrouch();
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_CanEverFly(UNavMovementComponent* Self)
	{
		return Self->CanEverFly();
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_CanEverJump(UNavMovementComponent* Self)
	{
		return Self->CanEverJump();
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_CanEverMoveOnGround(UNavMovementComponent* Self)
	{
		return Self->CanEverMoveOnGround();
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_CanEverSwim(UNavMovementComponent* Self)
	{
		return Self->CanEverSwim();
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_CanStartPathFollowing(UNavMovementComponent* Self)
	{
		return Self->CanStartPathFollowing();
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_CanStopPathFollowing(UNavMovementComponent* Self)
	{
		return Self->CanStopPathFollowing();
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_ClearFixedBrakingDistance(UNavMovementComponent* Self)
	{
		Self->ClearFixedBrakingDistance();
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_GetActorFeetLocation(UNavMovementComponent* Self)
	{
		return (INT_PTR) new FVector(Self->GetActorFeetLocation());
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_GetActorFeetLocationBased(UNavMovementComponent* Self)
	{
		return (INT_PTR) new FBasedPosition(Self->GetActorFeetLocationBased());
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_GetActorLocation(UNavMovementComponent* Self)
	{
		return (INT_PTR) new FVector(Self->GetActorLocation());
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_GetActorNavLocation(UNavMovementComponent* Self)
	{
		return (INT_PTR) new FVector(Self->GetActorNavLocation());
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_GetPathFollowingBrakingDistance(UNavMovementComponent* Self, float MaxSpeed)
	{
		auto _p0 = MaxSpeed;
		return Self->GetPathFollowingBrakingDistance(_p0);
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_IsCrouching(UNavMovementComponent* Self)
	{
		return Self->IsCrouching();
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_IsFalling(UNavMovementComponent* Self)
	{
		return Self->IsFalling();
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_IsFlying(UNavMovementComponent* Self)
	{
		return Self->IsFlying();
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_IsJumpAllowed(UNavMovementComponent* Self)
	{
		return Self->IsJumpAllowed();
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_IsMovingOnGround(UNavMovementComponent* Self)
	{
		return Self->IsMovingOnGround();
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_IsSwimming(UNavMovementComponent* Self)
	{
		return Self->IsSwimming();
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_RequestDirectMove(UNavMovementComponent* Self, INT_PTR MoveVelocity, bool bForceMaxSpeed)
	{
		auto _p0 = *(FVector*)MoveVelocity;
		auto _p1 = bForceMaxSpeed;
		Self->RequestDirectMove(_p0, _p1);
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_RequestPathMove(UNavMovementComponent* Self, INT_PTR MoveInput)
	{
		auto _p0 = *(FVector*)MoveInput;
		Self->RequestPathMove(_p0);
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_ResetMoveState(UNavMovementComponent* Self)
	{
		Self->ResetMoveState();
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_SetFixedBrakingDistance(UNavMovementComponent* Self, float DistanceToEndOfPath)
	{
		auto _p0 = DistanceToEndOfPath;
		Self->SetFixedBrakingDistance(_p0);
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_SetJumpAllowed(UNavMovementComponent* Self, bool bAllowed)
	{
		auto _p0 = bAllowed;
		Self->SetJumpAllowed(_p0);
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_SetUpdateNavAgentWithOwnersCollisions(UNavMovementComponent* Self, bool bUpdateWithOwner)
	{
		auto _p0 = bUpdateWithOwner;
		Self->SetUpdateNavAgentWithOwnersCollisions(_p0);
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_ShouldUpdateNavAgentWithOwnersCollision(UNavMovementComponent* Self)
	{
		return Self->ShouldUpdateNavAgentWithOwnersCollision();
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_StopActiveMovement(UNavMovementComponent* Self)
	{
		Self->StopActiveMovement();
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_StopMovementImmediately(UNavMovementComponent* Self)
	{
		Self->StopMovementImmediately();
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_StopMovementKeepPathing(UNavMovementComponent* Self)
	{
		Self->StopMovementKeepPathing();
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_UseAccelerationForPathFollowing(UNavMovementComponent* Self)
	{
		return Self->UseAccelerationForPathFollowing();
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_AddRadialForce(UNavMovementComponent* Self, INT_PTR Origin, float Radius, float Strength, ERadialImpulseFalloff Falloff)
	{
		auto _p0 = *(FVector*)Origin;
		auto _p1 = Radius;
		auto _p2 = Strength;
		auto _p3 = Falloff;
		Self->AddRadialForce(_p0, _p1, _p2, _p3);
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_AddRadialImpulse(UNavMovementComponent* Self, INT_PTR Origin, float Radius, float Strength, ERadialImpulseFalloff Falloff, bool bVelChange)
	{
		auto _p0 = *(FVector*)Origin;
		auto _p1 = Radius;
		auto _p2 = Strength;
		auto _p3 = Falloff;
		auto _p4 = bVelChange;
		Self->AddRadialImpulse(_p0, _p1, _p2, _p3, _p4);
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_GetDesc(UNavMovementComponent* Self)
	{
		return ConvertToManage_StringWrapper(Self->GetDesc());
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_GetDetailedInfoInternal(UNavMovementComponent* Self)
	{
		return ConvertToManage_StringWrapper(Self->GetDetailedInfoInternal());
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_IsAsset(UNavMovementComponent* Self)
	{
		return Self->IsAsset();
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_IsFullNameStableForNetworking(UNavMovementComponent* Self)
	{
		return Self->IsFullNameStableForNetworking();
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_IsLocalizedResource(UNavMovementComponent* Self)
	{
		return Self->IsLocalizedResource();
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_IsPostLoadThreadSafe(UNavMovementComponent* Self)
	{
		return Self->IsPostLoadThreadSafe();
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_IsReadyForFinishDestroy(UNavMovementComponent* Self)
	{
		return Self->IsReadyForFinishDestroy();
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_IsSafeForRootSet(UNavMovementComponent* Self)
	{
		return Self->IsSafeForRootSet();
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_Modify(UNavMovementComponent* Self, bool bAlwaysMarkDirty)
	{
		auto _p0 = bAlwaysMarkDirty;
		return Self->Modify(_p0);
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_NotifyObjectReferenceEliminated(UNavMovementComponent* Self)
	{
		Self->NotifyObjectReferenceEliminated();
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_PostCDOContruct(UNavMovementComponent* Self)
	{
		Self->PostCDOContruct();
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_PostEditImport(UNavMovementComponent* Self)
	{
		Self->PostEditImport();
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_PostRepNotifies(UNavMovementComponent* Self)
	{
		Self->PostRepNotifies();
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_PostSaveRoot(UNavMovementComponent* Self, bool bCleanupIsRequired)
	{
		auto _p0 = bCleanupIsRequired;
		Self->PostSaveRoot(_p0);
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_PreDestroyFromReplication(UNavMovementComponent* Self)
	{
		Self->PreDestroyFromReplication();
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_ShutdownAfterError(UNavMovementComponent* Self)
	{
		Self->ShutdownAfterError();
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_AddToCluster(UNavMovementComponent* Self, UObjectBaseUtility* ClusterRootOrObjectFromCluster, bool bAddAsMutableObject)
	{
		auto _p0 = ClusterRootOrObjectFromCluster;
		auto _p1 = bAddAsMutableObject;
		Self->AddToCluster(_p0, _p1);
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_CanBeClusterRoot(UNavMovementComponent* Self)
	{
		return Self->CanBeClusterRoot();
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_CanBeInCluster(UNavMovementComponent* Self)
	{
		return Self->CanBeInCluster();
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_CreateCluster(UNavMovementComponent* Self)
	{
		Self->CreateCluster();
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_OnClusterMarkedAsPendingKill(UNavMovementComponent* Self)
	{
		Self->OnClusterMarkedAsPendingKill();
	}