Plugins/UnrealDotNet/Source/NetCoreProject/UnrealEngine/Generate/Class/UNavMovementComponent.cs

		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern StringWrapper E_UNavMovementComponent_GetDesc(IntPtr Self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern StringWrapper E_UNavMovementComponent_GetDetailedInfoInternal(IntPtr Self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern bool E_UNavMovementComponent_IsAsset(IntPtr Self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern bool E_UNavMovementComponent_IsFullNameStableForNetworking(IntPtr Self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern bool E_UNavMovementComponent_IsLocalizedResource(IntPtr Self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern bool E_UNavMovementComponent_IsPostLoadThreadSafe(IntPtr Self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern bool E_UNavMovementComponent_IsReadyForFinishDestroy(IntPtr Self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern bool E_UNavMovementComponent_IsSafeForRootSet(IntPtr Self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern bool E_UNavMovementComponent_Modify(IntPtr Self, bool bAlwaysMarkDirty);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_UNavMovementComponent_NotifyObjectReferenceEliminated(IntPtr Self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_UNavMovementComponent_PostCDOContruct(IntPtr Self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_UNavMovementComponent_PostEditImport(IntPtr Self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_UNavMovementComponent_PostRepNotifies(IntPtr Self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_UNavMovementComponent_PostSaveRoot(IntPtr Self, bool bCleanupIsRequired);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_UNavMovementComponent_PreDestroyFromReplication(IntPtr Self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_UNavMovementComponent_ShutdownAfterError(IntPtr Self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_UNavMovementComponent_AddToCluster(IntPtr Self, IntPtr ClusterRootOrObjectFromCluster, bool bAddAsMutableObject);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern bool E_UNavMovementComponent_CanBeClusterRoot(IntPtr Self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern bool E_UNavMovementComponent_CanBeInCluster(IntPtr Self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_UNavMovementComponent_CreateCluster(IntPtr Self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_UNavMovementComponent_OnClusterMarkedAsPendingKill(IntPtr Self);
		
		#endregion
		
		#region ExternMethods
		
		/// <summary>
		/// <return>true if component can crouch </return>
		/// </summary>
		public bool CanEverCrouch()
			=> E_UNavMovementComponent_CanEverCrouch(this);
		
		
		/// <summary>
		/// <return>true if component can fly </return>
		/// </summary>
		public bool CanEverFly()
			=> E_UNavMovementComponent_CanEverFly(this);
		
		
		/// <summary>
		/// <return>true if component can jump </return>
		/// </summary>
		public bool CanEverJump()
			=> E_UNavMovementComponent_CanEverJump(this);
		
		
		/// <summary>
		/// <return>true if component can move along the ground (walk, drive, etc) </return>
		/// </summary>
		public bool CanEverMoveOnGround()
			=> E_UNavMovementComponent_CanEverMoveOnGround(this);
		
		
		/// <summary>
		/// <return>true if component can swim </return>
		/// </summary>
		public bool CanEverSwim()
			=> E_UNavMovementComponent_CanEverSwim(this);
		
		
		/// <summary>
		/// <return>true if path following can start </return>
		/// </summary>
		public virtual bool CanStartPathFollowing()
			=> E_UNavMovementComponent_CanStartPathFollowing(this);
		
		
		/// <summary>
		/// <para>check if current move target can be reached right now if positions are matching </para>
		/// <para>(e.g. performing scripted move and can't stop) </para>
		/// </summary>
		public virtual bool CanStopPathFollowing()
			=> E_UNavMovementComponent_CanStopPathFollowing(this);
		
		
		/// <summary>
		/// <para>clears fixed braking distance </para>
		/// </summary>
		public void ClearFixedBrakingDistance()
			=> E_UNavMovementComponent_ClearFixedBrakingDistance(this);
		
		
		/// <summary>
		/// <para>@returns location of controlled actor's "feet" meaning center of bottom of collision bounding box </para>
		/// </summary>
		public FVector GetActorFeetLocation()
			=> E_UNavMovementComponent_GetActorFeetLocation(this);
		
		
		/// <summary>
		/// <para>@returns based location of controlled actor </para>
		/// </summary>
		public virtual FBasedPosition GetActorFeetLocationBased()
			=> E_UNavMovementComponent_GetActorFeetLocationBased(this);
		
		
		/// <summary>
		/// <para>@returns location of controlled actor - meaning center of collision bounding box </para>
		/// </summary>
		public FVector GetActorLocation()
			=> E_UNavMovementComponent_GetActorLocation(this);
		
		
		/// <summary>
		/// <para>@returns navigation location of controlled actor </para>
		/// </summary>
		public FVector GetActorNavLocation()
			=> E_UNavMovementComponent_GetActorNavLocation(this);
		
		
		/// <summary>
		/// <para>@returns braking distance for acceleration driven path following </para>
		/// </summary>
		public virtual float GetPathFollowingBrakingDistance(float MaxSpeed)
			=> E_UNavMovementComponent_GetPathFollowingBrakingDistance(this, MaxSpeed);
		
		
		/// <summary>
		/// <return>true if currently crouching </return>
		/// </summary>
		public virtual bool IsCrouching()
			=> E_UNavMovementComponent_IsCrouching(this);
		
		
		/// <summary>
		/// <return>true if currently falling (not flying, in a non-fluid volume, and not on the ground) </return>
		/// </summary>
		public virtual bool IsFalling()
			=> E_UNavMovementComponent_IsFalling(this);
		
		
		/// <summary>
		/// <return>true if currently flying (moving through a non-fluid volume without resting on the ground) </return>
		/// </summary>
		public virtual bool IsFlying()
			=> E_UNavMovementComponent_IsFlying(this);
		
		
		/// <summary>
		/// <return>true if component is allowed to jump </return>
		/// </summary>
		public bool IsJumpAllowed()
			=> E_UNavMovementComponent_IsJumpAllowed(this);
		
		
		/// <summary>
		/// <return>true if currently moving on the ground (e.g. walking or driving) </return>
		/// </summary>
		public virtual bool IsMovingOnGround()
			=> E_UNavMovementComponent_IsMovingOnGround(this);
		
		
		/// <summary>
		/// <return>true if currently swimming (moving through a fluid volume) </return>
		/// </summary>
		public virtual bool IsSwimming()
			=> E_UNavMovementComponent_IsSwimming(this);
		
		
		/// <summary>
		/// <para>path following: request new velocity </para>
		/// </summary>
		public virtual void RequestDirectMove(FVector MoveVelocity, bool bForceMaxSpeed)
			=> E_UNavMovementComponent_RequestDirectMove(this, MoveVelocity, bForceMaxSpeed);
		
		
		/// <summary>
		/// <para>path following: request new move input (normal vector = full strength) </para>
		/// </summary>
		public virtual void RequestPathMove(FVector MoveInput)
			=> E_UNavMovementComponent_RequestPathMove(this, MoveInput);
		
		
		/// <summary>
		/// <para>Resets runtime movement state to character's movement capabilities </para>
		/// </summary>
		public void ResetMoveState()
			=> E_UNavMovementComponent_ResetMoveState(this);
		
		
		/// <summary>
		/// <para>set fixed braking distance </para>
		/// </summary>
		public void SetFixedBrakingDistance(float DistanceToEndOfPath)
			=> E_UNavMovementComponent_SetFixedBrakingDistance(this, DistanceToEndOfPath);
		
		
		/// <summary>
		/// <param name="bAllowed">true if component is allowed to jump </param>
		/// </summary>
		public void SetJumpAllowed(bool bAllowed)
			=> E_UNavMovementComponent_SetJumpAllowed(this, bAllowed);
		
		public void SetUpdateNavAgentWithOwnersCollisions(bool bUpdateWithOwner)
			=> E_UNavMovementComponent_SetUpdateNavAgentWithOwnersCollisions(this, bUpdateWithOwner);
		
		public bool ShouldUpdateNavAgentWithOwnersCollision()
			=> E_UNavMovementComponent_ShouldUpdateNavAgentWithOwnersCollision(this);
		
		
		/// <summary>
		/// <para>Stops applying further movement (usually zeros acceleration). </para>
		/// </summary>
		public virtual void StopActiveMovement()
			=> E_UNavMovementComponent_StopActiveMovement(this);
		
		public override void StopMovementImmediately()
			=> E_UNavMovementComponent_StopMovementImmediately(this);
		
		
		/// <summary>
		/// <para>Stops movement immediately (reset velocity) but keeps following current path </para>
		/// </summary>
		public void StopMovementKeepPathing()
			=> E_UNavMovementComponent_StopMovementKeepPathing(this);
		
		public bool UseAccelerationForPathFollowing()
			=> E_UNavMovementComponent_UseAccelerationForPathFollowing(this);
		
		
		/// <summary>
		/// <para>Adds force from radial force components. </para>
		/// <para>Intended to be overridden by subclasses; default implementation does nothing. </para>
		/// <param name="Origin">The origin of the force </param>
		/// <param name="Radius">The radius in which the force will be applied </param>
		/// <param name="Strength">The strength of the force </param>
		/// <param name="Falloff">The falloff from the force's origin </param>
		/// </summary>
		public override void AddRadialForce(FVector Origin, float Radius, float Strength, ERadialImpulseFalloff Falloff)
			=> E_UNavMovementComponent_AddRadialForce(this, Origin, Radius, Strength, (byte)Falloff);
		
		
		/// <summary>
		/// <para>Adds impulse from radial force components. </para>
		/// <para>Intended to be overridden by subclasses; default implementation does nothing. </para>
		/// <param name="Origin">The origin of the force </param>
		/// <param name="Radius">The radius in which the force will be applied </param>
		/// <param name="Strength">The strength of the force </param>
		/// <param name="Falloff">The falloff from the force's origin </param>
		/// <param name="bVelChange">If true, the Strength is taken as a change in velocity instead of an impulse (ie. mass will have no effect). </param>
		/// </summary>
		public override void AddRadialImpulse(FVector Origin, float Radius, float Strength, ERadialImpulseFalloff Falloff, bool bVelChange)
			=> E_UNavMovementComponent_AddRadialImpulse(this, Origin, Radius, Strength, (byte)Falloff, bVelChange);
		
